39_2022_Regular Season - 19.json

--- a/football/39/2022/Regular Season - 19.json
+++ b/football/39/2022/Regular Season - 19.json
@@ -2,7 +2,7 @@
     {
         "fixture": {
             "id": 868126,
-            "referee": null,
+            "referee": "A. Madley",
             "timezone": "UTC",
             "date": "2023-01-03T19:45:00+00:00",
             "timestamp": 1672775100,
@@ -26,7 +26,7 @@
             "name": "Premier League",
             "country": "England",
             "logo": "https://media-5.api-sports.io/football/leagues/39.png",
-            "flag": "https://media-6.api-sports.io/flags/gb.svg",
+            "flag": "https://media-5.api-sports.io/flags/gb.svg",
             "season": 2022,
             "round": "Regular Season - 19"
         },
@@ -34,13 +34,13 @@
             "home": {
                 "id": 42,
                 "name": "Arsenal",
-                "logo": "https://media-5.api-sports.io/football/teams/42.png",
+                "logo": "https://media-4.api-sports.io/football/teams/42.png",
                 "winner": null
             },
             "away": {
                 "id": 34,
                 "name": "Newcastle",
-                "logo": "https://media-4.api-sports.io/football/teams/34.png",
+                "logo": "https://media-6.api-sports.io/football/teams/34.png",
                 "winner": null
             }
         },
@@ -94,7 +94,7 @@
             "name": "Premier League",
             "country": "England",
             "logo": "https://media-5.api-sports.io/football/leagues/39.png",
-            "flag": "https://media-6.api-sports.io/flags/gb.svg",
+            "flag": "https://media-5.api-sports.io/flags/gb.svg",
             "season": 2022,
             "round": "Regular Season - 19"
         },
@@ -162,7 +162,7 @@
             "name": "Premier League",
             "country": "England",
             "logo": "https://media-5.api-sports.io/football/leagues/39.png",
-            "flag": "https://media-6.api-sports.io/flags/gb.svg",
+            "flag": "https://media-5.api-sports.io/flags/gb.svg",
             "season": 2022,
             "round": "Regular Season - 19"
         },
@@ -176,7 +176,7 @@
             "away": {
                 "id": 40,
                 "name": "Liverpool",
-                "logo": "https://media-6.api-sports.io/football/teams/40.png",
+                "logo": "https://media-5.api-sports.io/football/teams/40.png",
                 "winner": null
             }
         },
@@ -230,7 +230,7 @@
             "name": "Premier League",
             "country": "England",
             "logo": "https://media-5.api-sports.io/football/leagues/39.png",
-            "flag": "https://media-6.api-sports.io/flags/gb.svg",
+            "flag": "https://media-5.api-sports.io/flags/gb.svg",
             "season": 2022,
             "round": "Regular Season - 19"
         },
@@ -238,7 +238,7 @@
             "home": {
                 "id": 49,
                 "name": "Chelsea",
-                "logo": "https://media-4.api-sports.io/football/teams/49.png",
+                "logo": "https://media-5.api-sports.io/football/teams/49.png",
                 "winner": null
             },
             "away": {
@@ -298,7 +298,7 @@
             "name": "Premier League",
             "country": "England",
             "logo": "https://media-5.api-sports.io/football/leagues/39.png",
-            "flag": "https://media-6.api-sports.io/flags/gb.svg",
+            "flag": "https://media-5.api-sports.io/flags/gb.svg",
             "season": 2022,
             "round": "Regular Season - 19"
         },
@@ -306,13 +306,13 @@
             "home": {
                 "id": 52,
                 "name": "Crystal Palace",
-                "logo": "https://media-4.api-sports.io/football/teams/52.png",
+                "logo": "https://media-5.api-sports.io/football/teams/52.png",
                 "winner": null
             },
             "away": {
                 "id": 47,
                 "name": "Tottenham",
-                "logo": "https://media-6.api-sports.io/football/teams/47.png",
+                "logo": "https://media-4.api-sports.io/football/teams/47.png",
                 "winner": null
             }
         },
@@ -366,7 +366,7 @@
             "name": "Premier League",
             "country": "England",
             "logo": "https://media-5.api-sports.io/football/leagues/39.png",
-            "flag": "https://media-6.api-sports.io/flags/gb.svg",
+            "flag": "https://media-5.api-sports.io/flags/gb.svg",
             "season": 2022,
             "round": "Regular Season - 19"
         },
@@ -380,7 +380,7 @@
             "away": {
                 "id": 51,
                 "name": "Brighton",
-                "logo": "https://media-5.api-sports.io/football/teams/51.png",
+                "logo": "https://media-6.api-sports.io/football/teams/51.png",
                 "winner": null
             }
         },
@@ -410,7 +410,7 @@
     {
         "fixture": {
             "id": 868132,
-            "referee": null,
+            "referee": "D. Coote",
             "timezone": "UTC",
             "date": "2023-01-04T19:45:00+00:00",
             "timestamp": 1672861500,
@@ -434,7 +434,7 @@
             "name": "Premier League",
             "country": "England",
             "logo": "https://media-5.api-sports.io/football/leagues/39.png",
-            "flag": "https://media-6.api-sports.io/flags/gb.svg",
+            "flag": "https://media-5.api-sports.io/flags/gb.svg",
             "season": 2022,
             "round": "Regular Season - 19"
         },
@@ -442,13 +442,13 @@
             "home": {
                 "id": 63,
                 "name": "Leeds",
-                "logo": "https://media-6.api-sports.io/football/teams/63.png",
+                "logo": "https://media-5.api-sports.io/football/teams/63.png",
                 "winner": null
             },
             "away": {
                 "id": 48,
                 "name": "West Ham",
-                "logo": "https://media-5.api-sports.io/football/teams/48.png",
+                "logo": "https://media-6.api-sports.io/football/teams/48.png",
                 "winner": null
             }
         },
@@ -502,7 +502,7 @@
             "name": "Premier League",
             "country": "England",
             "logo": "https://media-5.api-sports.io/football/leagues/39.png",
-            "flag": "https://media-6.api-sports.io/flags/gb.svg",
+            "flag": "https://media-5.api-sports.io/flags/gb.svg",
             "season": 2022,
             "round": "Regular Season - 19"
         },
@@ -570,7 +570,7 @@
             "name": "Premier League",
             "country": "England",
             "logo": "https://media-5.api-sports.io/football/leagues/39.png",
-            "flag": "https://media-6.api-sports.io/flags/gb.svg",
+            "flag": "https://media-5.api-sports.io/flags/gb.svg",
             "season": 2022,
             "round": "Regular Season - 19"
         },
@@ -578,13 +578,13 @@
             "home": {
                 "id": 33,
                 "name": "Manchester United",
-                "logo": "https://media-4.api-sports.io/football/teams/33.png",
+                "logo": "https://media-5.api-sports.io/football/teams/33.png",
                 "winner": null
             },
             "away": {
                 "id": 35,
                 "name": "Bournemouth",
-                "logo": "https://media-6.api-sports.io/football/teams/35.png",
+                "logo": "https://media-5.api-sports.io/football/teams/35.png",
                 "winner": null
             }
         },
@@ -638,7 +638,7 @@
             "name": "Premier League",
             "country": "England",
             "logo": "https://media-5.api-sports.io/football/leagues/39.png",
-            "flag": "https://media-6.api-sports.io/flags/gb.svg",
+            "flag": "https://media-5.api-sports.io/flags/gb.svg",
             "season": 2022,
             "round": "Regular Season - 19"
         },
@@ -646,13 +646,13 @@
             "home": {
                 "id": 41,
                 "name": "Southampton",
-                "logo": "https://media-6.api-sports.io/football/teams/41.png",
+                "logo": "https://media-4.api-sports.io/football/teams/41.png",
                 "winner": null
             },
             "away": {
                 "id": 65,
                 "name": "Nottingham Forest",
-                "logo": "https://media-5.api-sports.io/football/teams/65.png",
+                "logo": "https://media-4.api-sports.io/football/teams/65.png",
                 "winner": null
             }
         },
