--- a/football/39/2022/Regular Season - 21.json
+++ b/football/39/2022/Regular Season - 21.json
@@ -34,13 +34,13 @@
             "home": {
                 "id": 40,
                 "name": "Liverpool",
-                "logo": "https://media-2.api-sports.io/football/teams/40.png",
+                "logo": "https://media.api-sports.io/football/teams/40.png",
                 "winner": null
             },
             "away": {
                 "id": 49,
                 "name": "Chelsea",
-                "logo": "https://media-2.api-sports.io/football/teams/49.png",
+                "logo": "https://media-1.api-sports.io/football/teams/49.png",
                 "winner": null
             }
         },
